--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 function my(){
-    window.location.href="homepage.html"
+    window.location.href="index.html"
 }
 function myFunction() {
   var x = document.querySelector(".navbar");
